<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>ru.antivoland.skype</groupId>
    <artifactId>dorfl</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>
    <name>dorfl</name>
    <url>https://github.com/antivoland/dorfl/</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <profiles>
        <profile>
            <id>local</id>
            <properties>
                <pom.xml.runMode>local</pom.xml.runMode>
                <pom.xml.log.level>all</pom.xml.log.level>
                <pom.xml.server.java.args>-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=7778 -Xms300M -Xmx500M -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -Xloggc:gc.log -ea</pom.xml.server.java.args>
                <pom.xml.settings.url>data/settings.json</pom.xml.settings.url>
            </properties>
        </profile>

        <profile>
            <id>test</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <pom.xml.runMode>test</pom.xml.runMode>
                <pom.xml.log.level>all</pom.xml.log.level>
                <pom.xml.server.java.args>-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=7778 -Xms300M -Xmx500M -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -Xloggc:gc.log -ea</pom.xml.server.java.args>
                <pom.xml.settings.url>data/settings.json</pom.xml.settings.url>
            </properties>
        </profile>
    </profiles>

    <dependencies>
        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>1.2.16</version>
        </dependency>
        <dependency>
            <groupId>commons-configuration</groupId>
            <artifactId>commons-configuration</artifactId>
            <version>1.8</version>
        </dependency>
        <dependency>
            <groupId>com.google.inject</groupId>
            <artifactId>guice</artifactId>
            <version>3.0</version>
        </dependency>
        <dependency>
            <groupId>org.codehaus.jackson</groupId>
            <artifactId>jackson-mapper-asl</artifactId>
            <version>1.9.2</version>
        </dependency>
        <dependency>
            <groupId>com.github.taksan</groupId>
            <artifactId>skype-java-api</artifactId>
            <version>1.5</version>
        </dependency>
        <dependency>
            <groupId>rome</groupId>
            <artifactId>rome</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>org.twitter4j</groupId>
            <artifactId>twitter4j-core</artifactId>
            <version>2.1.9</version>
        </dependency>
    </dependencies>

    <build>
        <finalName>dorphl</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/lib</outputDirectory>
                            <includeScope>compile</includeScope>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <configuration>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <classpathPrefix>lib/</classpathPrefix>
                            <mainClass>ru.antivoland.dorphl.Main</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                </configuration>
            </plugin>
        </plugins>

        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>
</project>
